next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.


Current Version (future 5.0.3, svn branch-5-0)
----------------------------------------------

- mappostgis.c: fix postgis idle-in-transaction problem (#2626)

- mapogcsld.c: fetch TextSymbolizer/Label/ogc:PropertyName correctly (#2611) 

- Don't ignore .qix file when DATA reference includes .shp extension (#590)

- CGI able to alter layers with space and underscores (#2516)

- WFS Multipoint query with PostGIS bug fixed (#2443)

- mappostgis.c: Fixed overlapping transactions causing core
  dump in fcgi (#2497, #2613)

- mapagg.cpp: Fixed rendering of non filled vector symbols (#2585)

- Fixed handling of encrypted connection strings in postgis driver (#2563)

- Fixed problem with large imagemaps generating no output (#2526)

- Fixed problem with two division signs in an expression being treated
  as a regex (#2527)

- Fixed gdImagePtr gdPImg memory leak in msSaveImageBufferGD() (#2525)

- mapwms.c: relax FORMAT parameter restrictions for GetFeatureInfo (#2517)

- mapwms.c: make GetLegendGraphic listen to TRANSPARENT in OUTPUTFORMAT (#2494)

- fix offsets on pixmap marker symbols (#2493)

- fix segfault in mapserv if STYLE is not defined (#2347)


Version 5.0.2 (2008-01-28)
--------------------------

- Solve a build problem with 5.0.1: generated new maplexer.c with 
  maplexer.l's changes from ticket #2331 to support setting WEB object's 
  minscale/maxscale properties via a URL.


Version 5.0.1 (2008-01-23)
--------------------------

- PDF: Set linecaps to round to fix disjoint lines. 

- PHP/Mapscript: on a shape object union_geos function should be called union
  (#2466)

- SLD using a single BBOX filter should generate an SQL ststement for 
  oracle/postgis/ogr (#2450)
